--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,12 @@ a {
   color: var(--black);
   text-decoration: none;
   cursor: pointer;
+  transition: all 0.2s ease 0s;
 }
 
 a:hover,
 a:active {
-  opacity: 0.7;
+  opacity: 0.1;
 }
 
 a,
@@ -63,16 +64,15 @@ h2 {
 *****************************************/
 /* Layout */
 .container {
+  position: relative;
   height: 100%;
-  max-height: 100vh;
 }
 
-/* Menu */
 .menu {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  max-width: 40vw;
-  margin: 1em auto 0;
+  display: flex;
+  max-width: max-content;
+  margin: 0 auto;
+  padding-top: 1em;
 }
 
 .menu ~ p {
@@ -81,51 +81,78 @@ h2 {
 }
 
 .main {
-  position: relative;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  justify-items: center;
+  margin: 3em auto 0;
 }
 
-.main h2 {
+.slider {
   margin-top: 3em;
-  text-align: center;
+  max-width: 90vw;
 }
 
-/*
-.arrow-right {
-  position: absolute;
-  max-width: 120px;
-  right: 0;
-  top: 250px;
+/* Temporal */
+.slider .imagen {
+  display: none;
 }
-*/
+
+.slider .imagen.actual {
+  display: block;
+}
+/* Aquí termina temporal */
 
 .swipe {
-  display: block;
-  text-align: center;
+  all: unset;
+  margin-top: 6em;
+  font-size: 12px;
+  letter-spacing: 12px;
 }
 
-/* Footer */
 .footer {
-  display: grid;
-  position: relative;
-  height: 1vh;
-}
-
-.footer a {
-  align-self: center;
   position: absolute;
+  bottom: 10px;
   left: 50%;
   transform: translate(-50%, 0);
-  bottom: 0;
-  margin-bottom: -3.8em;
+}
+
+/* Desktop */
+@media screen and (min-width: 40em) {
+  .swipe {
+    display: none;
+  }
 }
 
 /* Contacto */
-.container.contacto {
-  background: peru;
+[contacto] {
+  background: url(../assets/images/photo.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
 
-.contacto-container {
-  min-height: 80vh;
+.contacto {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 3em;
+}
+
+[contacto] .footer a {
+  color: grey;
+}
+
+@media screen and (min-width: 40em) {
+  [contacto] {
+    background: url(../assets/images/scan.jpg) no-repeat center center fixed;
+    background-size: cover;
+  }
+}
+/****************************************
+*    Info
+*****************************************/
+.info {
+  text-align: center;
+  text-transform: uppercase;
+  margin: 3em auto 0;
+  max-width: 80vw;
 }
 
 /****************************************
