--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ h2 {
 .slider .imagen.actual {
   display: block;
 }
-/* Aquí termina temporal */
+/* 
 
 .swipe {
   all: unset;
@@ -108,6 +108,7 @@ h2 {
   font-size: 12px;
   letter-spacing: 12px;
 }
+ */
 
 .footer {
   position: absolute;
@@ -116,11 +117,9 @@ h2 {
   transform: translate(-50%, 0);
 }
 
-/* Desktop */
-@media screen and (min-width: 40em) {
-  .swipe {
-    display: none;
-  }
+/* Swipe */
+.swipe {
+  display: none;
 }
 
 /* Contacto */
@@ -153,6 +152,12 @@ h2 {
   text-transform: uppercase;
   margin: 3em auto 0;
   max-width: 80vw;
+  height: 300px;
+}
+
+.info a {
+  display: inline-block;
+  padding-top: 1em;
 }
 
 /****************************************
@@ -194,7 +199,13 @@ h2 {
   z-index: 10;
   transform: translatex(0);
 }
-
+/*
+.imagen.actual[data-nombre="Preludios"]::after {
+  content: "";
+  border: 1px solid blue;
+  transform: translateY(400px);
+}
+*/
 .slide.siguiente {
   z-index: 10;
   transform: translatex(100%);
@@ -285,4 +296,81 @@ h2 {
 /* Ayuda visual temporal */
 .outline {
   border: 2px dotted blue;
+}
+
+/****************************************
+*    Helpers
+*****************************************/
+@media screen and (max-width: 40em) {
+  .showcase {
+    position: relative;
+    width: 380px;
+    height: 480px;
+    background: url(../assets/images/preludios.jpg);
+    animation: change-bg 20s linear infinite;
+    transition: 1s;
+  }
+
+  @keyframes change-bg {
+    0% {
+      background: url(../assets/images/done/1.png);
+    }
+    5% {
+      background: url(../assets/images/done/2.jpg);
+    }
+    10% {
+      background: url(../assets/images/done/3.png);
+    }
+    20% {
+      background: url(../assets/images/done/4.png);
+    }
+    25% {
+      background: url(../assets/images/done/5.jpg);
+    }
+    30% {
+      background: url(../assets/images/done/6.png);
+    }
+    35% {
+      background: url(../assets/images/done/7.png);
+    }
+    40% {
+      background: url(../assets/images/done/8.jpg);
+    }
+    45% {
+      background: url(../assets/images/done/9.jpg);
+    }
+    50% {
+      background: url(../assets/images/done/10.jpg);
+    }
+    55% {
+      background: url(../assets/images/done/11.jpg);
+    }
+    60% {
+      background: url(../assets/images/done/12.jpg);
+    }
+    65% {
+      background: url(../assets/images/done/13.jpg);
+    }
+    70% {
+      background: url(../assets/images/done/14.jpg);
+    }
+    75% {
+      background: url(../assets/images/done/15.jpg);
+    }
+    80% {
+      background: url(../assets/images/done/166.jpg);
+    }
+    85% {
+      background: url(../assets/images/done/17.jpg);
+    }
+    90% {
+      background: url(../assets/images/done/18.jpg);
+    }
+    95% {
+      background: url(../assets/images/done/19.jpg);
+    }
+    100% {
+      background: url(../assets/images/done/19.jpg);
+    }
+  }
 }
