--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a {
 
 a:hover,
 a:active {
-  opacity: 0.1;
+  opacity: 0.3;
 }
 
 a,
@@ -59,6 +59,14 @@ h2 {
   font-size: 12px;
 }
 
+button {
+  all: unset;
+}
+
+[active] {
+  opacity: 0.3;
+}
+
 /****************************************
 *    Components - Common
 *****************************************/
@@ -66,6 +74,11 @@ h2 {
 .container {
   position: relative;
   height: 100%;
+  min-width: 100vw;
+}
+
+nav {
+  z-index: 20;
 }
 
 .menu {
@@ -205,7 +218,7 @@ h2 {
 .siguiente {
   z-index: 10;
   position: absolute;
-  opacity: 0;
+  /*  opacity: 0; */
   min-width: 190px;
   min-height: 480px;
   transform: translateY(-480px);
@@ -219,39 +232,19 @@ h2 {
   right: 0;
 }
 
-/*
-.imagen.actual[data-nombre="Preludios"]::after {
-  content: "";
-  border: 1px solid blue;
-  transform: translateY(400px);
-}
-*/
 .slide.siguiente {
   z-index: 10;
   transform: translatex(100%);
 }
 
-/*
-@media screen and (max-width: 40em) {
-  .slider {
-    z-index: 1;
-  }
-
-  button {
-    z-index: 10;
-  }
-}
-*/
 @media screen and (min-width: 40em) {
   .slider {
-    display: flex;
-    max-width: max-content;
-    margin: 10vh auto 0;
+    margin: auto;
   }
 
   .imagenes {
-    width: 380px;
-    height: 480px;
+    width: 654px;
+    height: 850px;
     position: relative;
     margin: 0 auto;
     overflow: hidden;
@@ -286,35 +279,41 @@ h2 {
     z-index: 10;
     transform: translatex(100%);
   }
+}
+/****************************************
+*    Fixes
+*****************************************/
+button.anterior {
+  transform: translate(-4vw, 1vh);
+  height: 90vh;
+  min-width: calc(100vw / 2);
+  top: 0;
+  border: 1px solid red;
+}
 
-  button {
-    border: none;
-    background: transparent;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-  }
+button.siguiente {
+  transform: translate(12vw, 1vh);
+  height: 90vh;
+  min-width: calc(100vw / 2);
+  top: 0;
+  border: none;
+  border: 1px solid blue;
+}
 
+@media screen and (min-width: 40em) {
   button.anterior {
-    margin-right: 20vw;
+    transform: translate(-27.25vw, 1vh);
+    height: 90vh;
+    min-width: calc(100vw / 2);
+    top: 0;
+    border: 1px solid blue;
   }
 
   button.siguiente {
-    margin-left: 20vw;
-  }
-
-  button:hover {
-    opacity: 0.5;
-  }
-
-  button:first-child {
-    order: 1;
-  }
-
-  button:last-child {
-    order: 3;
-    transform: rotate(180deg);
+    transform: translate(-27.25vw, 1vh);
+    height: 90vh;
+    min-width: calc(100vw / 2);
+    top: 0;
+    border: none;
   }
 }
-/****************************************
-*    Helpers
-*****************************************/
