--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a,
 p,
 h1,
 h2 {
-  font-size: 10px;
+  font-size: 9.5px;
 }
 
 button {
@@ -76,13 +76,12 @@ button {
   height: 100%;
   min-width: 100vw;
 }
-
+/*
 .home {
   max-height: 100vh;
   overflow-x: hidden;
-  /* overflow-y: hidden; */
 }
-
+*/
 nav {
   z-index: 20;
   height: 8vh;
@@ -116,7 +115,7 @@ nav {
 .slider {
   position: relative;
   margin: auto;
-  padding-top: 1em;
+  /* padding-top: 1em; */
   /* max-width: 90vw; */
 }
 
@@ -128,26 +127,12 @@ nav {
 .slider .imagen.actual {
   display: block;
 }
-/* 
-
-.swipe {
-  all: unset;
-  margin-top: 6em;
-  font-size: 12px;
-  letter-spacing: 12px;
-}
- */
 
 .footer {
   position: absolute;
   bottom: 20px; /* Instagram */
   left: 50%;
   transform: translate(-50%, 0);
-}
-
-/* Swipe */
-.swipe {
-  display: none;
 }
 
 /* Contacto */
@@ -330,4 +315,11 @@ button.siguiente {
     top: 0;
     border: none;
   }
+}
+
+/* Slider fix */
+.image-contain {
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
 }
