--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a,
 p,
 h1,
 h2 {
-  font-size: 9.5px;
+  font-size: 10px;
 }
 
 button {
@@ -80,8 +80,9 @@ button {
 .home {
   max-height: 100vh;
   overflow-x: hidden;
-}
-*/
+
+}*/
+
 nav {
   z-index: 20;
   height: 8vh;
@@ -95,11 +96,9 @@ nav {
   display: flex;
   max-width: max-content;
   margin: 0 auto;
-  /* padding-top: 1em;*/
 }
 
 .menu ~ p {
-  /*  margin-top: 0.2em;*/
   text-align: center;
 }
 
@@ -108,14 +107,12 @@ nav {
   display: grid;
   grid-template-rows: auto 1fr;
   justify-items: center;
-  /* max-height: 90vh; */
-  /* margin: 1em auto;*/
 }
 
 .slider {
   position: relative;
   margin: auto;
-  /* padding-top: 1em; */
+  /* padding-top: 1em;*/
   /* max-width: 90vw; */
 }
 
@@ -177,6 +174,7 @@ nav {
 *   Slider
 *****************************************/
 .slider {
+  margin-top: 3em;
   z-index: 1;
 }
 
@@ -241,12 +239,12 @@ nav {
     margin-top: 0;
   }
   .slider {
-    margin: auto;
+    margin: 0 auto;
   }
 
   .imagenes {
     width: 654px;
-    height: 850px;
+    height: 85vh;
     position: relative;
     margin: 0 auto;
     overflow: hidden;
@@ -300,6 +298,7 @@ button.siguiente {
   border: none;
 }
 
+/*
 @media screen and (min-width: 40em) {
   button.anterior {
     transform: translate(-27.25vw, 1vh);
@@ -315,9 +314,25 @@ button.siguiente {
     top: 0;
     border: none;
   }
+}*/
+
+@media screen and (min-width: 40em) {
+  button.anterior {
+    transform: translate(-30.25vw, 1vh);
+    height: 80vh;
+    min-width: 80vw;
+    top: 0;
+  }
+
+  button.siguiente {
+    transform: translate(0, 1vh);
+    height: 80vh;
+    min-width: 80vw;
+    top: 0;
+    border: none;
+  }
 }
 
-/* Slider fix */
 .image-contain {
   height: 100%;
   object-fit: contain;
